responsive fix badge z-index

--- a/resumeStyle.css
+++ b/resumeStyle.css
@@ -101,4 +101,5 @@ main{
     width: 25%;
     top: 7vh;
     left: 8vh;
+    z-index: -1;
 }
